Fix card mobile navigation not fitting on screen

--- a/imports/ui/card/navigation/navigation.scss
+++ b/imports/ui/card/navigation/navigation.scss
@@ -13,6 +13,7 @@
 
 .cardNavigation > li {
   flex: auto;
+  width: 1%;
   @media(max-width: 767px) {
     a {
       font-size: $font_size_card_navigation_mobile !important;
